--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["linear-programming", "optimization", "math", "solver"]
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.71.1"
+bindgen = "0.72"
 cmake = { version = "0.1.49", optional = true }
 pkg-config = { version = "0.3.27", optional = true }
 ureq = { version = "2.0", optional = true }
@@ -21,7 +21,7 @@ flate2 = { version = "1.0", optional = true }
 tar = { version = "0.4", optional = true }
 
 [features]
-default = ["build", "highs_release"]
+default = ["bundled", "highs_release"]
 discover = ["dep:pkg-config"]
 build = ["dep:cmake"]
 bundled = ["dep:ureq", "dep:tempfile", "dep:flate2", "dep:tar"]
